# linkerhand

./: README.md  README_CN.md  find_linker_hand.sh  release_3.1.1.txt  requirements.txt
doc/: Topic-Reference.md
examples/L10/gesture/: action-group-show-normal.py
examples/L7/gesture/: =12  action-group-show-ti.py
examples/setting_info/: package.xml  setup.cfg  setup.py
examples/setting_info/setting_info/: setting_info_node.py
graphic_display/: package.xml  setup.cfg  setup.py
graphic_display/graphic_display/: graphic_display.py
graphic_display/graphic_display/views/: temperature_plot.py  wave_form_plot.py
gui_control/: package.xml  setup.py
gui_control/gui_control/: gui_control.py  gui_control.py.ttk
gui_control/gui_control/config/: constants.py
gui_control/gui_control/utils/: color_msg.py  mapping.py
gui_control/launch/: gui_control.launch.py
linker_hand_ros2_sdk/: package.xml  setup.cfg  setup.py
linker_hand_ros2_sdk/launch/: linker_hand.launch.py  linker_hand_double.launch.py  test.bak
linker_hand_ros2_sdk/linker_hand_ros2_sdk/: linker_hand.py  linker_hand.py.bak  linker_hand_advanced_g20.py  linker_hand_advanced_l10.py  linker_hand_advanced_l6.py  linker_hand_advanced_l7.py  linker_hand_advanced_o6.py  linker_hand_g20_palm_touch.py
linker_hand_ros2_sdk/linker_hand_ros2_sdk/LinkerHand/: linker_hand_api.py
pressure_diagram/: package.xml  setup.cfg  setup.py
pressure_diagram/launch/: pressure_diagram.launch.py
pressure_diagram/pressure_diagram/: pressure_diagram.py
(+25 files in other folders)
